changed up some stuff

--- a/index.html
+++ b/index.html
@@ -232,28 +232,14 @@
         </div>
         <div class = "row">
 
-          <div class = "col-md-6">
-            <form action="action.php" method="post">
-              <div class="form-group">
-                <label for = "email">Email:</label>
-                <input type = "text" class = "form-control mb-3" id = "email" placeholder="Enter your email here">
-
-                <label for = "name">Name:</label>
-                <input type = "text" class = "form-control mb-3" id = "name" placeholder="Enter your name here">
-
-                <label for = "subject">Subject:</label>
-                <input type = "text" class = "form-control mb-3" id = "subject">
-
-                <label for = "comment">Message</label>
-                <textarea class = "form-control" rows = "5" id = "comment" placeholder="Leave a message"></textarea>
-
-              </div>
-
-              <button type = "submit" class = "btn btn-primary mb-2">Submit</button>
-            </form>
+          <div class = "col-sm-6" id="contact-btn">
+            <div class = "text-center">
+              <h1>Have any projects?</h1>
+              <a href = "mailto:madur0392@gmail.com">Contact Me</a>
+            </div>
           </div>
 
-          <div class = "col-lg-6">
+          <div class = "col-md-6">
             <div class="text-center p-2">
               <h2>This website was made using:</h2>
               <div class = "small">
