added url for restaurant page

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/restaurant.png" alt="Card image">
                       <div class="card-body">
                         <div class = "text-center">
-                          <p class="card-text"><a href = "#">Restaurant Landing Page</a></p>
+                          <p class="card-text"><a href = "https://restaurantlandingpage.netlify.app/">Restaurant Landing Page</a></p>
                         </div>
                       </div>
                   </div>
