Added todoapp Project

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <div class = "col-sm-6">
             <div class = "fade-in">
               <h2>Hey There!</h2>
-              <h2>I am <span class = "different"> Raphael Madu </span></h2>
-              <h3 class = "">Front-End Designer and Python Developer</h3>
-              <p class = "cv-btn"><a href="#">Check out my LinkedIn Profile</a></p>
+              <h2>I am <strong class = "different"> Raphael Madu </strong></h2>
+              <h3 class = "">Front-End Designer and Python Developer/Programmer</h3>
+              <p class = "cv-btn"><a href="https://www.linkedin.com/in/raphael-madu/">Check out my LinkedIn Profile</a></p>
             </div>
           </div>
         </div>
@@ -65,8 +65,8 @@
         <div class = "row">
           <div class = "col-md-6">
             <h1 class = "different text-center"> About Me </h1>
-            <h2>Freelancing Front-End Designer and Django App Developer</h2>
-            <p>Hey there! I am Raphael Madu. I am a beginner Bootstrap Front-End Designer and Django App Developer. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business.</p>
+            <h2>Front-End Designer and Python WebApp Developer</h2>
+            <p>Hey there! I am <strong>Raphael Madu</strong>. I am a Bootstrap Front-End Designer and a Python Web App Developer. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business.</p>
           </div>
 
           <div class = "col-md-6 mypic">
@@ -76,11 +76,102 @@
         </div>
       </section>
 
-      <section id = "services" class = "pb-3">
+      <!--
+      <section id  = "scripts" class = "p-5">
+        <div class = "text-center">
+          <h2 class = "different">Python Scripts</h2>
+        </div>
+
+        <div class = "row">
+          <div class = "col-md-6">
+            <div class= "p-4">
+          </div>
+        </div>
+      </section>
+      -->
+
+
+      <section id = "projects" class = "p-5">
+        <div class = "text-center">
+          <h2 class="different">Projects</h2>
+        </div>
+
+        <div class = "row">
+
+          <div class = "col-md-6">
+              <div class = "p-4">
+                <div class = "card">
+                    <img class="card-img-top mx-auto d-block pt-2"  src="images/blog.png" alt="Card image">
+                      <div class="card-body">
+                        <div class = "text-center">
+                          <p class="card-text">
+                            <a href="images/django_blog.mp4">Django blogsite</a></p>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class = "col-md-6">
+              <div class = "p-4">
+                <div class = "card" >
+                    <img class="card-img-top mx-auto d-block pt-2"  src="images/quotegenerator.png" alt="Card image">
+                      <div class="card-body">
+                        <div class = "text-center">
+                          <p class="card-text"><a href = "https://aqueous-crag-20948.herokuapp.com/">Splurty App: Quote Generator</a></p>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class = "col-md-6">
+              <div class = "p-4">
+                <div class = "card" >
+                    <img class="card-img-top mx-auto d-block pt-2"  src="images/restaurant.png" alt="Card image">
+                      <div class="card-body">
+                        <div class = "text-center">
+                          <p class="card-text"><a href = "https://restaurantlandingpage.netlify.app/">Restaurant Landing Page</a></p>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class = "col-md-6">
+              <div class = "p-4">
+                <div class = "card" >
+                    <img class="card-img-top mx-auto d-block pt-2"  src="images/DjangoEcomm.png" alt="Card image">
+                      <div class="card-body">
+                        <div class = "text-center">
+                          <p class="card-text"><a href = "#">DjangoEcommerce</a></p>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class = "col-md-6">
+              <div class = "p-4">
+                <div class = "card" >
+                    <img class="card-img-top mx-auto d-block pt-2"  src="images/Todoapp.png" alt="Card image">
+                      <div class="card-body">
+                        <div class = "text-center">
+                          <p class="card-text"><a href = "#">ToDo App</a></p>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+        </div>
+
+          <section id = "services" class = "pb-3">
         <div class = "text-center">
           <h2 class = "different">Services</h2>
             <p class = "pb-2">Services I Provide</p>
         </div>
+        
           <div class = "row">
 
             <!--Card 1 -->
@@ -107,7 +198,7 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/python.png" alt="Card image">
                       <div class="card-body">
                         <div class = "text-center">
-                          <h2>Python Web Developer</h2>
+                          <h2>Python Web Developer and Programmer</h2>
                           <p class="card-text">With the help of bootstrap and other front end languages and the django web framework, i have been able to build, design and deploy a django web application.</p>
                         </div>
                       </div>
@@ -122,7 +213,7 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/bootstrap.png" alt="Card image">
                       <div class="card-body no-design">
                         <div class = "text-center">
-                          <h2>Bootstrap Web Designer</h2>
+                          <h2>Bootstrap and Wordpress Web Designer</h2>
                           <p class="card-text">I have been able to create responsive Websites and designs.</p>
                         </div>
                       </div>
@@ -134,7 +225,7 @@
       </section>
 
 
-      <section id = "languages" class = "pt-3">
+       <section id = "languages" class = "pt-3">
         <h1 class = "p-2 text-center different">Languages I speak</h1>
 
           <div class = "row">
@@ -167,8 +258,9 @@
                 <h3 class="">Web Frame Works</h3>
                 <ul class = "p-2">
                   <li class="mb-1">Bootstrap 4</li>
-                  <li class = "mb-1">Django Web Framework</li>
+                  <li class = "mb-1">Django</li>
                   <li class="mb-1">Flask</li>
+                  <li class="mb-1">Wordpress CMS</li>
                 </ul>
               </div>
             </div>
@@ -176,55 +268,6 @@
           </div>
       </section>
 
-      <section id = "projects" class = "p-5">
-        <div class = "text-center">
-          <h2 class="different">Projects</h2>
-        </div>
-
-        <div class = "row">
-
-          <div class = "col-lg-6">
-              <div class = "p-4">
-                <div class = "card">
-                    <img class="card-img-top mx-auto d-block pt-2"  src="images/blog.png" alt="Card image">
-                      <div class="card-body">
-                        <div class = "text-center">
-                          <p class="card-text"><a href="#">Django blogsite</a></p>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-
-            <div class = "col-sm-6">
-              <div class = "p-4">
-                <div class = "card" >
-                    <img class="card-img-top mx-auto d-block pt-2"  src="images/quotegenerator.png" alt="Card image">
-                      <div class="card-body">
-                        <div class = "text-center">
-                          <p class="card-text"><a href = "https://aqueous-crag-20948.herokuapp.com/">Splurty App: Quote Generator</a></p>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-
-            <div class = "col-sm-6">
-              <div class = "p-4">
-                <div class = "card" >
-                    <img class="card-img-top mx-auto d-block pt-2"  src="images/restaurant.png" alt="Card image">
-                      <div class="card-body">
-                        <div class = "text-center">
-                          <p class="card-text"><a href = "https://restaurantlandingpage.netlify.app/">Restaurant Landing Page</a></p>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-
-        </div>
-
-      </section>
 
       <section id = "contact-id" class = "p-5">
         <div class = "text-center">
@@ -246,7 +289,7 @@
                 <img src="images/bootstrap.png" class = "img-fluid">
                 <img src="images/css.jpg" class = "img-fluid">
                 <img src="images/html.png" class = "img-fluid">
-                <img src="images/php.png" class = "img-fluid">
+                <!--<img src="images/php.png" class = "img-fluid"> -->
               </div>
             </div>
           </div>
