Adding the medium and github links to bio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class = "fade-in">
               <h2>Hey There!</h2>
               <h2>I am <strong class = "different"> Raphael Madu </strong></h2>
-              <h3 class = "">Front-End Designer and Python Developer/Programmer</h3>
+              <h3 class = "">Python Developer/Programmer and Data Scientist</h3>
               <p class = "cv-btn"><a href="https://www.linkedin.com/in/raphael-madu/">Check out my LinkedIn Profile</a></p>
             </div>
           </div>
@@ -65,8 +65,10 @@
         <div class = "row">
           <div class = "col-md-6">
             <h1 class = "different text-center"> About Me </h1>
-            <h2>Front-End Designer and Python WebApp Developer</h2>
-            <p>Hey there! I am <strong>Raphael Madu</strong>. I am a Bootstrap Front-End Designer and a Python Web App Developer. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business.</p>
+            <h2>Front-End Designer and Python WebApp Developer and Data Scientist</h2>
+            <p>Hey there! I am <strong>Raphael Madu</strong>. I am a Bootstrap Front-End Designer, a Python Web App Developer and Data Scientist. I have experience in designing web portfolio's and Ecommerce stores using website CMS builders such as Wordpress and Wix website builder. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business. </p>
+            <p class = "cv-btn"><a href="https://newbieprogrammer.medium.com/">Medium Blog</a></p>
+            <p class = "cv-btn"><a href="https://github.com/Raphael181">Github Repository</a></p>
           </div>
 
           <div class = "col-md-6 mypic">
@@ -275,7 +277,7 @@
         </div>
         <div class = "row">
 
-          <div class = "col-sm-6" id="contact-btn">
+          <div class = "col-md-6 pb-2" id="contact-btn">
             <div class = "text-center">
               <h1>Have any projects?</h1>
               <a href = "mailto:madur0392@gmail.com">Contact Me</a>
