Added machine learning projects and minor edits

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class = "fade-in">
               <h2>Hey There!</h2>
               <h2>I am <strong class = "different"> Raphael Madu </strong></h2>
-              <h3 class = "">Python Developer/Programmer and Data Scientist</h3>
+              <h3 class = "">Python Developer/Programmer and Machine Learning Engineer</h3>
               <p class = "cv-btn"><a href="https://www.linkedin.com/in/raphael-madu/">Check out my LinkedIn Profile</a></p>
             </div>
           </div>
@@ -65,8 +65,9 @@
         <div class = "row">
           <div class = "col-md-6">
             <h1 class = "different text-center"> About Me </h1>
-            <h2>Front-End Designer and Python WebApp Developer and Data Scientist</h2>
-            <p>Hey there! I am <strong>Raphael Madu</strong>. I am a Bootstrap Front-End Designer, a Python Web App Developer and Data Scientist. I have experience in designing web portfolio's and Ecommerce stores using website CMS builders such as Wordpress and Wix website builder. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business. </p>
+            <h2>
+            Python WebApp Developer and Machine Learning Engineer</h2>
+            <p>Hey there! I am <strong>Raphael Madu</strong>. I am a Python Web App Developer and Machine Learning Engineer. I have experience in designing web portfolio's and Ecommerce stores using website CMS builders such as Wordpress and Wix website builder. I am currently looking for new opportunities where I can further develop my skillset as well as aid in the growth of the company/ business. </p>
             <p class = "cv-btn"><a href="https://newbieprogrammer.medium.com/">Medium Blog</a></p>
             <p class = "cv-btn"><a href="https://github.com/Raphael181">Github Repository</a></p>
           </div>
@@ -107,7 +108,7 @@
                       <div class="card-body">
                         <div class = "text-center">
                           <p class="card-text">
-                            <a href="images/django_blog.mp4">Django blogsite</a></p>
+                            <a href="https://github.com/Raphael181/djangoblog">Django blogsite</a></p>
                         </div>
                       </div>
                   </div>
@@ -146,7 +147,7 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/DjangoEcomm.png" alt="Card image">
                       <div class="card-body">
                         <div class = "text-center">
-                          <p class="card-text"><a href = "#">DjangoEcommerce</a></p>
+                          <p class="card-text"><a href = "https://github.com/Raphael181/djangoecommerce">DjangoEcommerce</a></p>
                         </div>
                       </div>
                   </div>
@@ -159,7 +160,7 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/Todoapp.png" alt="Card image">
                       <div class="card-body">
                         <div class = "text-center">
-                          <p class="card-text"><a href = "#">ToDo App</a></p>
+                          <p class="card-text"><a href = "https://github.com/Raphael181/Todoproject">ToDo App</a></p>
                         </div>
                       </div>
                   </div>
@@ -168,7 +169,107 @@
 
         </div>
 
-          <section id = "services" class = "pb-3">
+        <section id  = 'machine-learning' class = 'pt-3'>
+          <h1 class = 'p-2 text-center different'>Machine Learning Projects</h1>
+
+          <div class = 'row'>
+
+            <div class = 'col-md-4'>
+              <div class = 'p-4'>
+                <div class = 'card'>
+                  <div class = 'card-body'>
+                    <div class = 'text-center'>
+                      <h2><a href = "https://github.com/Raphael181/Raphael181/blob/main/Linear_Regression_Health_Costs_Calculator.ipynb">Healthcare Calculator</a></h2>
+                      <p class = 'card-text'>Created a healthcare cost calculator using linear regression algorithhm.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class = 'col-md-4'>
+              <div class = 'p-4'>
+                <div class = 'card'>
+                  <div class = 'card-body'>
+                    <div class = 'text-center'>
+                      <h2><a href = "https://github.com/Raphael181/Raphael181/blob/main/Cats_vs_Dogs.ipynb">Cats_vs_Dogs Image Classification</a></h2>
+                      <p class = 'card-text'>Performed Image Classification on a dataset consisting of images of cats and dogs. This project required my knowledge of Convolutional Neural Networks(CNN's), Image/Data Augmentation, and my ability to leverage pretrained models(in this case, we used the VGG16 model)to further improve accuracy of model</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class = 'col-md-4'>
+                <div class = 'p-4'>
+                  <div class = 'card'>
+                    <div class = 'card-body'>
+                      <div class = 'text-center'>
+                        <h2><a href = "#">Predicting Diabetes</a></h2>
+                        <p class = 'card-text'>Using the diabetes mellitus dataset provided on kaggle, I performed Data analysis and data manipulation on given dataset and was able to create a multilayer perceptron to correctly predict if an indivual was at risk of getting diabetes</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class = 'col-md-4'>
+                <div class = 'p-4'>
+                  <div class = 'card'>
+                    <div class = 'card-body'>
+                      <div class = 'text-center'>
+                        <h2><a href = "https://github.com/Raphael181/Raphael181/blob/main/NYC_taxifare_dataset.ipynb">Predicting NYC taxi fair</a></h2>
+                        <p class = 'card-text'>Designed and created a Neural Network that could predict the fair price between two locations in New York</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class = 'col-md-4'>
+                <div class = 'p-4'>
+                  <div class = 'card'>
+                    <div class = 'card-body'>
+                      <div class = 'text-center'>
+                        <h2><a href = "#">Dog Breed Detection and Classifier</a></h2>
+                        <p class = 'card-text'>Using CNN's, OpenCV and using pretrained models such as the VGG16, I have been able to build a neural network that can correctly identify what breed the dog is</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class = 'col-md-4'>
+                <div class = 'p-4'>
+                  <div class = 'card'>
+                    <div class = 'card-body'>
+                      <div class = 'text-center'>
+                        <h2><a href = "#">Face Recognition and Identification</a></h2>
+                        <p class = 'card-text'>Using OpenCV and tensorflow, was able to create and train a Siamese Neural Network that could correctly identify and predict faces of individuals</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class = 'col-md-4'>
+                <div class = 'p-4'>
+                  <div class = 'card'>
+                    <div class = 'card-body'>
+                      <div class = 'text-center'>
+                        <h2><a href = "https://github.com/Raphael181/Raphael181/blob/main/TensorFlow_Sentiment_Analysis_with_RNN's.ipynb">Sentiment Analysis</a></h2>
+                        <p class = 'card-text'>Predicted if a movie review was good or bad using NLP and LSTM</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+        
+        </section>
+
+        <section id = "services" class = "pb-3">
         <div class = "text-center">
           <h2 class = "different">Services</h2>
             <p class = "pb-2">Services I Provide</p>
@@ -185,8 +286,8 @@
                   </div>
                       <div class="card-body">
                         <div class = "text-center">
-                          <h2>Front-End Design</h2>
-                          <p class="card-text">With the help of Web Frameworks and my extensive Knowledge in Html, CSS and Javascript, I have been able to create and design functional websites and web applications</p>
+                          <h2>Machine Learning Engineer</h2>
+                          <p class="card-text"></p>
                         </div>
                       </div>
                   </div>
@@ -200,8 +301,8 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/python.png" alt="Card image">
                       <div class="card-body">
                         <div class = "text-center">
-                          <h2>Python Web Developer and Programmer</h2>
-                          <p class="card-text">With the help of bootstrap and other front end languages and the django web framework, i have been able to build, design and deploy a django web application.</p>
+                          <h2>Python Programmer</h2>
+                          <p class="card-text"></p>
                         </div>
                       </div>
                   </div>
@@ -215,8 +316,8 @@
                     <img class="card-img-top mx-auto d-block pt-2"  src="images/bootstrap.png" alt="Card image">
                       <div class="card-body no-design">
                         <div class = "text-center">
-                          <h2>Bootstrap and Wordpress Web Designer</h2>
-                          <p class="card-text">I have been able to create responsive Websites and designs.</p>
+                          <h2>Backend web developer</h2>
+                          <p class="card-text"></p>
                         </div>
                       </div>
                   </div>
@@ -227,12 +328,12 @@
       </section>
 
 
-       <section id = "languages" class = "pt-3">
+      <section id = "languages" class = "pt-3">
         <h1 class = "p-2 text-center different">Languages I speak</h1>
 
           <div class = "row">
 
-            <div class="col-sm-4">
+            <div class="col-sm-6">
               <div class = "text-center">
                 <h3 class="">Front-End Languages</h3>
                 <ul class="p-2">
@@ -243,7 +344,7 @@
               </div>
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-6">
               <div class = "text-center">
                 <h3 class = "">Back-End Languages</h3>
                 <ul class="p-2">
@@ -255,7 +356,7 @@
               </div>
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-6">
               <div class = "text-center">
                 <h3 class="">Web Frame Works</h3>
                 <ul class = "p-2">
@@ -263,6 +364,20 @@
                   <li class = "mb-1">Django</li>
                   <li class="mb-1">Flask</li>
                   <li class="mb-1">Wordpress CMS</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class = "text-center">
+                <h3 class="">Machine learning Libraries</h3>
+                <ul class = "p-2">
+                  <li class="mb-1">Tensorflow and keras</li>
+                  <li class = "mb-1">OpenCV</li>
+                  <li class="mb-1">Scikit learn</li>
+                  <li class="mb-1">Pandas</li>
+                  <li class="mb-1">Numpy</li>
+                  <li class="mb-1">Matplotlib</li>
                 </ul>
               </div>
             </div>
